<resources>
    <string name="app_name">Github User</string>
    <string name="string_bgSearch">Input Username Github</string>
    <string name="text_hint">Search Username</string>
    <string name="string_name">Aldi Susanto</string>
    <string name="string_work">Google Inc</string>
    <string name="string_username">aldisusanto</string>
    <string name="string_typeUser">User</string>
    <string name="string_following">Following</string>
    <string name="string_followers">Followers</string>
    <string name="string_repository">Repository</string>
    <string name="share">share</string>
    <string name="not_found">Name not found</string>
    <string name="setting">Settings</string>
    <string name="string_illustration_icon">Illustration_icon</string>
    <string name="string_bg_explore">Explore Developer in Github</string>
    <string name="searchDescription">Search Button</string>
    <string name="label_result">Result</string>
    <string name="string_not_found">Result Not Found!</string>
    <string name="search_hint">Search Developers....</string>
    <string name="string_share">Share To :</string>
    <string name="string_share_body">"hey, I want to recommend a github account for learning, just click it -> https://github.com/%1$s, the owner of the account is %2$s, Have a good study.</string>
    <string name="string_internet_not_connected">Not Connected</string>
    <string name="favorite_action_label">See</string>
    <string name="user_added_to_favorite_label">Added To favorite</string>
    <string name="user_remove_from_favorite_label">Remove From Favorite</string>
    <string name="redirect_message">Sorry, unauthorized activity</string>
    <string name="favorite">Favorite</string>
    <string name="string_illustration_favorite_not_found">you still don\'t have a favorite developer, let\'s search and find your favorite developer</string>
    <string name="illustration_description">Image Background Favorite</string>
    <string name="action_bar_title_favorite">Users Favorites</string>
    <string name="reminder_setup_success_message">Reminder installed successfully</string>
    <string name="reminder_cancel_success_message">Reminder successfully canceled</string>
    <string name="string_setting_language">Setting language</string>
    <string name="string_default_language">Indonesia</string>
    <string name="string_setting_reminder">Set reminder</string>
    <string name="string_setting_time_reminder_label">Time</string>
    <string name="string_setting_set_time">09:00</string>
    <string name="string_action_bar_setting">Settings</string>
    <string name="string_receiver_message">Hello, Have you found your developers today?</string>
</resources>