<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context=".ui.setting.SettingActivity">

    <TextView
        android:id="@+id/label_setting_language"
        style="@style/textContentSetting"
        android:text="@string/string_setting_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_setting_language_default"
        style="@style/textContentSetting"
        android:drawablePadding="@dimen/drawable_padding"
        android:gravity="center"
        android:text="@string/string_default_language"
        app:drawableEndCompat="@drawable/ic_language"
        app:layout_constraintBottom_toBottomOf="@+id/label_setting_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label_setting_language" />

    <TextView
        android:id="@+id/label_setting_reminder"
        style="@style/textContentSetting"
        android:layout_marginTop="16dp"
        android:text="@string/string_setting_reminder"
        app:layout_constraintStart_toStartOf="@+id/label_setting_language"
        app:layout_constraintTop_toBottomOf="@+id/label_setting_language" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_settings_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/label_setting_reminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label_setting_reminder" />

    <TextView
        android:id="@+id/label_setting_time_reminder"
        style="@style/textContentSetting"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/string_setting_time_reminder_label"
        app:layout_constraintStart_toStartOf="@+id/label_setting_reminder"
        app:layout_constraintTop_toBottomOf="@+id/label_setting_reminder" />

    <TextView
        android:id="@+id/label_setting_set_time_label"
        style="@style/textContentSetting"
        android:layout_marginStart="20dp"
        android:clickable="true"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/string_setting_set_time"
        app:drawableEndCompat="@drawable/ic_baseline_access_time_24"
        app:layout_constraintBottom_toBottomOf="@+id/label_setting_time_reminder"
        app:layout_constraintStart_toEndOf="@+id/label_setting_time_reminder"
        app:layout_constraintTop_toTopOf="@+id/label_setting_time_reminder"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>