<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="8dp"
    android:paddingTop="12dp"
    tools:context=".ui.search.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/text_search"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/bg_textbox"
            android:paddingHorizontal="8dp"
            android:theme="@style/Widget.AppCompat.Light.SearchView"
            app:layout_constraintBottom_toBottomOf="@id/btn_card_search"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_card_search"
            app:layout_constraintTop_toTopOf="@id/btn_card_search"
            app:queryHint="@string/search_hint" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_card_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            app:cardBackgroundColor="@color/black_300"
            app:cardCornerRadius="12dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/searchDescription"
                    app:srcCompat="@drawable/ic_baseline_search_24_white" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/bg_explore_text"
            style="@style/textContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:maxWidth="250dp"
            android:text="@string/string_bg_explore"
            android:textColor="@color/text_illustration_color"
            android:textSize="30sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/bg_explore_image"
            app:layout_constraintStart_toStartOf="@+id/bg_explore_image"
            app:layout_constraintTop_toBottomOf="@+id/bg_explore_image" />

        <ImageView
            android:id="@+id/bg_explore_image"
            android:layout_width="@dimen/image_illustration_size"
            android:layout_height="@dimen/image_illustration_size"
            android:contentDescription="@string/string_illustration_icon"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_search_24" />

        <ImageView
            android:id="@+id/bg_internet_image"
            android:layout_width="@dimen/image_illustration_size"
            android:layout_height="@dimen/image_illustration_size"
            android:contentDescription="@string/string_illustration_icon"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_wifi_off_24" />

        <TextView
            android:id="@+id/bg_internet_text"
            style="@style/textContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:maxWidth="250dp"
            android:text="@string/string_internet_not_connected"
            android:textColor="@color/text_illustration_color"
            android:textSize="30sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/bg_internet_image"
            app:layout_constraintStart_toStartOf="@+id/bg_internet_image"
            app:layout_constraintTop_toBottomOf="@+id/bg_internet_image" />


        <TextView
            android:id="@+id/label_result"
            style="@style/textContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/label_result"
            android:textSize="22sp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_user"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:paddingTop="8dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_result"
            tools:listitem="@layout/item_users" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/black_300"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_not_found"
            style="@style/textContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:text="@string/string_not_found"
            android:textSize="30sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_search" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>